Skip to content
GitLab
Menu
Projects
Groups
Snippets
Help
Help
Support
Community forum
Keyboard shortcuts
?
Submit feedback
Contribute to GitLab
Sign in / Register
Toggle navigation
Menu
Open sidebar
GStreamer
gst-plugins-bad
Issues
#457
Closed
Open
Created
Nov 16, 2016
by
Bugzilla Migration User
@bugzilla-migration
[PLUGIN-MOVE] Move stereo to gst-plugins-good/audiofx
Submitted by Sebastian Dröge
@slomo
Link to original bug (#774550)
Description
Trivial audio effect filter