audiofx: add stereo element which was moved from -bad to build

Fixes https://gitlab.freedesktop.org/gstreamer/gst-plugins-bad/issues/457